--- a/scss/default/_themes.scss
+++ b/scss/default/_themes.scss
@@ -1,5 +1,38 @@
 // Created by WareBare on 10/23/2016.
 
+$Base_BackgroundColor_00: #202024; // Body
+$Base_BackgroundColor_01: #2D2D36; // Navigation
+
+// SideBar List Button
+$SideBarList_BackgroundColor_00_HOVER: #505050;
+$SideBarList_BackgroundColor_00_ACTIVE: #505050;
+
+$SideBarList_FontColor_00_ACTIVE: rgb(153, 140, 24);
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 $border-000: #000000;
 
 $backgroundColor-000: #202020;
