--- a/scss/default/_main.scss
+++ b/scss/default/_main.scss
@@ -419,6 +419,7 @@ div.MergerDBRContainer{
     }
 }
 
+/*
 div.MergerDBR, div.wndMasterySkillEdit{
     fieldset{
         display: block;
@@ -488,6 +489,7 @@ div.MergerDBR, div.wndMasterySkillEdit{
         }
     }
 }
+*/
 
 #app{
     display: block;
